--- a/起源服务器查询/起源服务器查询.csproj
+++ b/起源服务器查询/起源服务器查询.csproj
@@ -131,6 +131,10 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="query_server.cs" />
+    <Compile Include="query_server_list.xaml.cs">
+      <DependentUpon>query_server_list.xaml</DependentUpon>
+    </Compile>
     <Compile Include="server.cs" />
     <Compile Include="tile.cs" />
   </ItemGroup>
@@ -203,6 +207,10 @@
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="query_server_list.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
