更新改为异步调用

--- a/起源服务器查询/起源服务器查询.csproj
+++ b/起源服务器查询/起源服务器查询.csproj
@@ -137,6 +137,7 @@
     </Compile>
     <Compile Include="server.cs" />
     <Compile Include="tile.cs" />
+    <Compile Include="Windows\ApplicationModel\CoreApplication.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
