--- a/起源服务器查询/起源服务器查询.csproj
+++ b/起源服务器查询/起源服务器查询.csproj
@@ -216,16 +216,19 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
-      <Version>6.2.10</Version>
+      <Version>6.2.12</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications">
-      <Version>6.1.1</Version>
+      <Version>7.0.2</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.UI.Xaml">
+      <Version>2.6.1</Version>
     </PackageReference>
     <PackageReference Include="Realm">
-      <Version>5.1.2</Version>
+      <Version>10.3.0</Version>
     </PackageReference>
     <PackageReference Include="Realm.Fody">
-      <Version>5.1.2</Version>
+      <Version>10.3.0</Version>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
